--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,73 @@
-.App {
+ html { 
+  background: url(img/background/bckgrnd.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#home {
+  background-color: black;
+  height: 140px;
+  width: 100%;
+
+}
+
+#index-header {
+  height: 140px;
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#navigationbar {
+  float: left;
+  border-color: black;
+  border-width: 5px;
+  height: 550px;
+  width: 150px;
+  margin-left: 20px;
+}
+
+#navButton {
+  background-color: rgba(0,0,0,0.5);
+  color: whitesmoke;
+  height: 50px;
+  width: 210px;
   text-align: center;
+  font-size: 20px;
+  border: none;
+  border-left: 7px solid black;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#navButton:hover {
+  background-color: black;
+  border-left: 8px dotted red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#welcomeImg {
+  margin-top: 33px;
+  width: 65%;
+  height: 85%;
+  border: 5px dotted whitesmoke;
 }
 
-.App-link {
-  color: #61dafb;
+#welcomeFrame {
+  float: left;
+  width: 65%;
+  height: 480px;
+  margin-left: 220px;
+  margin-top: 38px;
+  background-color: rgba(0,0,0,0.5);
+  text-align: center;
+  vertical-align: middle;
+  border: 5px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#face-icon {
+  top: 0px;
+  right: 0px;
+  color: whitesmoke;
+  font-size: 50px;
 }
