--- a/src/style/About.css
+++ b/src/style/About.css
@@ -40,8 +40,7 @@ html {
     text-align: center;
     font-size: 20px;
     border: none;
-    border-left: 7px solid black;
-  
+    border-left: 7px solid black;  
   }
   
   #navButton:hover {
@@ -52,7 +51,15 @@ html {
   }
   
   #face-icon {
-    margin-left: 100px;
+    margin-left: 50px;
+    margin-top: 45px;
+    float: left;
+    color: whitesmoke;
+    font-size: 50px;
+  }
+
+  #home-icon {
+    margin-left: 50px;
     margin-top: 45px;
     float: left;
     color: whitesmoke;
@@ -60,6 +67,11 @@ html {
   }
   
   #face-icon:hover {
+    transition: 0.4s;
+    color: darkred;
+  }
+
+  #home-icon:hover {
     transition: 0.4s;
     color: darkred;
   }
