--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -76,12 +76,17 @@ html {
     color: darkred;
   }
 
-  #video {
+  #video-frame {
     margin-left: 30%;
     margin-top: 30px;
-    height: 350px;
+    height: 400px;
     width: 600px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
     text-align: center;
     border: 5px dotted darkred;
+  }
+
+  #video-title {
+    color: whitesmoke;
+    font-size: 18px;
   }
