--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -89,3 +89,17 @@ html {
     color: whitesmoke;
     font-size: 18px;
   }
+
+  #img {
+    width: 50%;
+    height: 100%;
+  }
+
+  #imgFrame{
+    background-color: rgba(0,0,0,0.8);
+    margin-left: 20%;
+    margin-top: 30px;
+    width: 60%;
+    height: 20em;
+    text-align: center;
+  }
