Added links to the Links.js page

--- a/src/style/Links.css
+++ b/src/style/Links.css
@@ -75,3 +75,18 @@ html {
     transition: 0.4s;
     color: darkred;
   }
+
+  #butikker {
+    color: whitesmoke;
+    font-size: 20px;
+    background-color: rgba(0,0,0,0.75);
+    border: 5px dotted darkred;
+    padding: 20px;
+    margin-left: 25%;
+    margin-top: 2%;
+    width: 60%;
+  }
+
+  #link-text {
+    color: darkred;
+  }
