Added events to the calendar

--- a/src/style/Calendar.css
+++ b/src/style/Calendar.css
@@ -75,3 +75,14 @@ html {
     transition: 0.4s;
     color: darkred;
   }
+
+  #timeline {
+    color: whitesmoke;
+    font-size: 20px;
+    background-color: rgba(0,0,0,0.75);
+    border: 5px dotted darkred;
+    padding: 20px;
+    margin-left: 25%;
+    margin-top: 2%;
+    width: 55%;
+  }
