--- a/src/style/About.css
+++ b/src/style/About.css
@@ -76,123 +76,61 @@ html {
     color: darkred;
   }
 
-  #textDiv {
-      margin-left: 20px;
-      overflow: auto;
+  #frame1 {
+    margin-left: 25%;
+    margin-top: 2.5%;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.7);
+    text-align: center;
+    width: 60%;
   }
 
- #text-first {
-     background-color: rgba(0,0,0,0.7);
-     margin-top: 43px;
-     width: 30%;
-     height: 70%;
-     color: whitesmoke;
-     padding: 20px;
-     text-align: justify;
-     margin-left: 250px;
-     float: left;
- }
-
- #text-second {
-  background-color: rgba(0,0,0,0.7);
-  margin-top: 43px;
-  width: 40%;
-  height: 30%;
-  color: whitesmoke;
-  padding: 20px;
-  text-align: justify;
-  margin-left: 50px;
-  float: right;
-}
-
-#text-third {
-  background-color: rgba(0,0,0,0.7);
-  margin-top: 43px;
-  width: 30%;
-  height: 70%;
-  color: whitesmoke;
-  padding: 20px;
-  text-align: justify;
-  margin-left: 250px;
-  float: left;
-}
-
-#text-fourth {
-  background-color: rgba(0,0,0,0.7);
-  margin-top: 43px;
-  width: 30%;
-  height: 70%;
-  color: whitesmoke;
-  padding: 20px;
-  text-align: justify;
-  margin-left: 250px;
-  float: right;
-}
-
-
- #about1 {
-    border: 5px dotted whitesmoke;
-    height: 80%;
-    width: 90%;
-    margin-top: 30px;
-}
-
-#frame1 {
-    float: right;
-    margin-top: 43px;
-    margin-right: 232px;
+  #frame2 {
+    margin-left: 25%;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    padding: 5px;
     background-color: rgba(0,0,0,0.7);
-    width: 468px;
-    height: 418px;
+    width: 60%;
     text-align: center;
-}
+  }
 
-#about2 {
-  border: 5px dotted whitesmoke;
-  height: 65%;
-  width: 75%;
-  margin-top: 30px;
-}
+  #frame3 {
+    margin-left: 25%;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.7);
+    width: 60%;
+    text-align: center;
+  }
 
-#frame2 {
-  float: left;
-  margin-top: 43px;
-  background-color: rgba(0,0,0,0.7);
-  width: 350;
-  height: 200;
-  text-align: center;
-}
 
-#about3 {
-  border: 5px dotted whitesmoke;
-  height: 40%;
-  width: 50%;
-  margin-top: 30px;
-}
+  #about1 {
+    width: 30%;
+    height: 80%;
+    border: 5px dotted whitesmoke;
+    margin-top: 2%;
+  }
 
-#frame3 {
-  float: right;
-  margin-top: 43px;
-  margin-right: 232px;
-  background-color: rgba(0,0,0,0.7);
-  width: 468px;
-  height: 500;
-  text-align: center;
-}
+  #about2 {
+    width: 30%;
+    height: 80%;
+    border: 5px dotted whitesmoke;
+  } 
 
-#about4 {
-  border: 5px dotted whitesmoke;
-  height: 50%;
-  width: 60%;
-  margin-top: 30px;
-}
 
-#frame4 {
-  float: left;
-  margin-top: 43px;
-  margin-right: 232px;
-  background-color: rgba(0,0,0,0.7);
-  width: 468px;
-  height: 200;
-  text-align: center;
-}
+  #text {
+    white-space: pre-wrap;
+    background-color: rgba(0,0,0,0.7);
+    border-left: 5px solid black;
+    border-right:  5px solid black;
+    color: whitesmoke;
+    padding: 20px;
+    margin-left: 25%;
+    width: 58%;
+  }
