--- a/src/style/About.css
+++ b/src/style/About.css
@@ -123,7 +123,6 @@ html {
     border: 5px dotted whitesmoke;
   } 
 
-
   #text {
     white-space: pre-wrap;
     background-color: rgba(0,0,0,0.7);
@@ -133,4 +132,27 @@ html {
     padding: 20px;
     margin-left: 25%;
     width: 58%;
+  }
+
+  #topButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: darkred;
+    color: black;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 30px;
+  }
+  
+  #topButton:hover {
+    background-color: black;
+    color: darkred;
+    border-bottom: 6px dotted whitesmoke;
+    transition: 0.3s;
   }
