--- a/src/style/Links.css
+++ b/src/style/Links.css
@@ -90,3 +90,26 @@ html {
   #link-text {
     color: darkred;
   }
+
+  #topButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: darkred;
+    color: black;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 30px;
+  }
+  
+  #topButton:hover {
+    background-color: black;
+    color: darkred;
+    border-bottom: 6px dotted whitesmoke;
+    transition: 0.3s;
+  }
