--- a/src/style/About.css
+++ b/src/style/About.css
@@ -40,7 +40,8 @@ html {
     text-align: center;
     font-size: 20px;
     border: none;
-    border-left: 7px solid black;  
+    border-left: 7px solid black;
+    border-radius: 10px;  
   }
   
   #navButton:hover {
@@ -115,12 +116,14 @@ html {
     height: 80%;
     border: 5px dotted whitesmoke;
     margin-top: 2%;
+    border-radius: 15px;
   }
 
   #about2 {
     width: 30%;
     height: 80%;
     border: 5px dotted whitesmoke;
+    border-radius: 15px;
   } 
 
   #text {
