--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -40,7 +40,8 @@ html {
     text-align: center;
     font-size: 20px;
     border: none;
-    border-left: 7px solid black;  
+    border-left: 7px solid black;
+    border-radius: 10px;    
   }
   
   #navButton:hover {
@@ -81,6 +82,7 @@ html {
     margin-top: 15px;
     height: 90%;
     width: 60%;
+    border-radius: 15px;
   }
   
   #contFrame {
