--- a/src/style/Links.css
+++ b/src/style/Links.css
@@ -40,7 +40,8 @@ html {
     text-align: center;
     font-size: 20px;
     border: none;
-    border-left: 7px solid black;  
+    border-left: 7px solid black;
+    border-radius: 10px;    
   }
   
   #navButton:hover {
@@ -85,6 +86,7 @@ html {
     margin-left: 25%;
     margin-top: 2%;
     width: 60%;
+    border-radius: 15px;
   }
 
   #link-text {
