--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -40,6 +40,7 @@ html {
     font-size: 20px;
     border: none;
     border-left: 7px solid black;
+    border-radius: 10px;  
   }
   
   #navButton:hover {
