--- a/src/style/Training.css
+++ b/src/style/Training.css
@@ -40,7 +40,8 @@ html {
     text-align: center;
     font-size: 20px;
     border: none;
-    border-left: 7px solid black;  
+    border-left: 7px solid black;
+    border-radius: 10px;    
   }
   
   #navButton:hover {
@@ -101,12 +102,14 @@ html {
     height: 100%;
     border: 5px dotted whitesmoke;
     margin-top: 2%;
+    border-radius: 15px;
   }
 
   #trainingImg2 {
     width: 50%;
     height: 100%;
     border: 5px dotted whitesmoke;
+    border-radius: 15px;
   }
 
   #text-input {
