--- a/src/style/Calendar.css
+++ b/src/style/Calendar.css
@@ -108,6 +108,7 @@ html {
     padding: 15px;
     border-radius: 10px;
     font-size: 30px;
+    transition: 1.0s;
   }
   
   #topButton:hover {
@@ -115,4 +116,5 @@ html {
     color: darkred;
     border-bottom: 6px dotted whitesmoke;
     transition: 0.3s;
+    font-size: 35px;
   }
