--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -119,6 +119,7 @@ html {
     padding: 15px;
     border-radius: 10px;
     font-size: 30px;
+    transition: 1.0s;
   }
   
   #topButton:hover {
@@ -126,4 +127,5 @@ html {
     color: darkred;
     border-bottom: 6px dotted whitesmoke;
     transition: 0.3s;
+    font-size: 35px;
   }
