Removed ImageGallery module as it wasn't working

--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -84,6 +84,7 @@ html {
     background-color: rgba(0,0,0,0.8);
     text-align: center;
     border: 5px dotted darkred;
+    border-radius: 15px;
   }
 
   #video-title {
