--- a/src/style/About.css
+++ b/src/style/About.css
@@ -16,11 +16,10 @@ html {
   #about-header {
     float: right;
     margin-top: 5px;
-    margin-right: 25%;
+    margin-right: 20%;
     text-align: center;
     height: 140px;
-    width: 50%;
-  
+    width: 55%;  
   }
   
   #navigationbar {
@@ -117,6 +116,7 @@ html {
     border: 5px dotted whitesmoke;
     margin-top: 2%;
     border-radius: 15px;
+    transition: 0.4s;
   }
 
   #about2 {
@@ -124,6 +124,24 @@ html {
     height: 80%;
     border: 5px dotted whitesmoke;
     border-radius: 15px;
+    transition: 0.4s;
+  } 
+
+  #about1:hover {
+    width: 30%;
+    height: 80%;
+    border: 5px dotted darkred;
+    margin-top: 2%;
+    border-radius: 15px;
+    transition: 0.4s;
+  }
+
+  #about2:hover {
+    width: 30%;
+    height: 80%;
+    border: 5px dotted darkred;
+    border-radius: 15px;
+    transition: 0.4s;
   } 
 
   #text {
