--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -16,10 +16,10 @@ html {
   #contact-header {
     float: right;
     margin-top: 5px;
-    margin-right: 25%;
+    margin-right: 20%;
     text-align: center;
     height: 140px;
-    width: 50%;  
+    width: 55%;  
   }
   
   #navigationbar {
@@ -77,11 +77,21 @@ html {
   }
 
   #contImg {
+    border: 5px dotted whitesmoke;
+    margin-top: 15px;
+    height: 90%;
+    width: 60%;
+    border-radius: 15px;
+    transition: 0.4s;
+  }
+
+  #contImg:hover {
     border: 5px dotted darkred;
     margin-top: 15px;
     height: 90%;
     width: 60%;
     border-radius: 15px;
+    transition: 0.4s;
   }
   
   #contFrame {
@@ -92,6 +102,7 @@ html {
     height: 400px;
     text-align: center;
     border: 5px solid black;
+    border-radius: 15px;
   }
 
   #contText {
@@ -100,9 +111,11 @@ html {
     color: whitesmoke;
     font-size: 20px;
     background-color: rgba(0,0,0,0.7);
-    text-align: center;
     width: 800px;
     height: 50px;
+    border-radius: 15px;
+    border: 2px solid black;
+    padding-top: 15px;
     text-align: center;
   }
 
