--- a/src/style/Join.css
+++ b/src/style/Join.css
@@ -16,11 +16,10 @@ html {
   #join-header {
     float: right;
     margin-top: 5px;
-    margin-right: 25%;
+    margin-right: 20%;
     text-align: center;
     height: 140px;
-    width: 50%;
-  
+    width: 55%;  
   }
   
   #navigationbar {
@@ -113,6 +112,7 @@ html {
     border: 5px dotted whitesmoke;
     margin-top: 2%;
     border-radius: 15px;
+    transition: 0.4s;
   }
 
   #joinImg2 { 
@@ -120,6 +120,24 @@ html {
     height: 100%;
     border: 5px dotted whitesmoke;
     border-radius: 15px;
+    transition: 0.4s;
+  }
+
+  #joinImg:hover {
+    width: 50%;
+    height: 100%;
+    border: 5px dotted darkred;
+    margin-top: 2%;
+    border-radius: 15px;
+    transition: 0.4s;
+  }
+
+  #joinImg2:hover { 
+    width: 50%;
+    height: 100%;
+    border: 5px dotted darkred;
+    border-radius: 15px;
+    transition: 0.4s;
   }
 
   #text-input {
