--- a/src/style/Media.css
+++ b/src/style/Media.css
@@ -16,10 +16,10 @@ html {
   #media-header {
     float: right;
     margin-top: 5px;
-    margin-right: 25%;
+    margin-right: 20%;
     text-align: center;
     height: 140px;
-    width: 50%;
+    width: 55%;
   }
   
   #navigationbar {
@@ -129,4 +129,60 @@ html {
     border-bottom: 6px dotted whitesmoke;
     transition: 0.3s;
     font-size: 35px;
+  }
+
+  #frameTop {
+    margin-left: 25%;
+    margin-top: 2.5%;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.7);
+    text-align: center;
+    width: 60%;
+  }
+
+  #frameMid {
+    margin-left: 25%;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.7);
+    width: 60%;
+    text-align: center;
+  }
+
+  #frameBottom {
+    margin-left: 25%;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    border-bottom: 5px solid black;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.7);
+    width: 60%;
+    text-align: center;
+  }
+
+  #imageTop {
+    height: 90%;
+    width: 90%;
+    border-left: 5px dotted darkred;
+    border-right: 5px dotted darkred;
+    border-top: 5px dotted darkred;
+  }
+
+  #imageMid {
+    height: 90%;
+    width: 90%;
+    border-left: 5px dotted darkred;
+    border-right: 5px dotted darkred;
+  }
+
+  #imageBottom {
+    height: 90%;
+    width: 90%;
+    border-left: 5px dotted darkred;
+    border-right: 5px dotted darkred;
+    border-bottom: 5px dotted darkred;
   }
